{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 45,
  "lineage": "e704ffa9-c352-1663-b2b1-5dd53dbf7e2c",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058264272613:loadbalancer/app/vwanu-api-dev-alb-v2/5405c52b3a88a92b",
            "arn_suffix": "app/vwanu-api-dev-alb-v2/5405c52b3a88a92b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "vwanu-api-dev-alb-v2-2046464708.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264272613:loadbalancer/app/vwanu-api-dev-alb-v2/5405c52b3a88a92b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "vwanu-api-dev-alb-v2",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06f6951162405d435"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c8cde12dd5d3d9f8"
              },
              {
                "subnet_id": "subnet-0f7521f1ef85bb2a4"
              }
            ],
            "subnets": [
              "subnet-0c8cde12dd5d3d9f8",
              "subnet-0f7521f1ef85bb2a4"
            ],
            "tags": {
              "Name": "vwanu-api-dev-alb-v2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "vwanu-api-dev-alb-v2",
              "Project": "vwanu-api"
            },
            "vpc_id": "vpc-0f17131e4cc494af0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058264272613:listener/app/vwanu-api-dev-alb-v2/5405c52b3a88a92b/5ac7891ff52013d5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264272613:listener/app/vwanu-api-dev-alb-v2/5405c52b3a88a92b/5ac7891ff52013d5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:058264272613:loadbalancer/app/vwanu-api-dev-alb-v2/5405c52b3a88a92b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "vwanu-api"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058264272613:targetgroup/vwanu-api-dev-tg-v2/9628d65db3e15fcb",
            "arn_suffix": "targetgroup/vwanu-api-dev-tg-v2/9628d65db3e15fcb",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264272613:targetgroup/vwanu-api-dev-tg-v2/9628d65db3e15fcb",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "vwanu-api-dev-tg-v2",
            "port": 4000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "vwanu-api-dev-tg-v2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "vwanu-api-dev-tg-v2",
              "Project": "vwanu-api"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f17131e4cc494af0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264272613:security-group/sg-06f6951162405d435",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06f6951162405d435",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vwanu-api-dev-alb-20250531213510100400000002",
            "name_prefix": "vwanu-api-dev-alb-",
            "owner_id": "058264272613",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vwanu-api-dev-alb-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "vwanu-api-dev-alb-sg",
              "Project": "vwanu-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f17131e4cc494af0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264272613:security-group/sg-07a79e59351f8aa1b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07a79e59351f8aa1b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP from ALB",
                "from_port": 4000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4000
              }
            ],
            "name": "vwanu-api-dev-ec2-20250531213510100300000001",
            "name_prefix": "vwanu-api-dev-ec2-",
            "owner_id": "058264272613",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vwanu-api-dev-ec2-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "vwanu-api-dev-ec2-sg",
              "Project": "vwanu-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f17131e4cc494af0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264272613:security-group/sg-00e5e6e69212e58f8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00e5e6e69212e58f8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from EC2",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07a79e59351f8aa1b"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "vwanu-api-dev-rds-20250531214316622500000001",
            "name_prefix": "vwanu-api-dev-rds-",
            "owner_id": "058264272613",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vwanu-api-dev-rds-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "vwanu-api-dev-rds-sg",
              "Project": "vwanu-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f17131e4cc494af0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.ec2",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "3e787eb4",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264272613:security-group/sg-07aaca1a078ba385b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07aaca1a078ba385b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from EC2",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07a79e59351f8aa1b"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "vwanu-api-dev-rds-20250531213512971000000004",
            "name_prefix": "vwanu-api-dev-rds-",
            "owner_id": "058264272613",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vwanu-api-dev-rds-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "vwanu-api-dev-rds-sg",
              "Project": "vwanu-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f17131e4cc494af0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.ec2",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "86048052",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264272613:security-group/sg-0eebb5e1c6019f5d8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eebb5e1c6019f5d8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from EC2",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07a79e59351f8aa1b"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "vwanu-api-dev-rds-v2-20250531214202024800000001",
            "name_prefix": "vwanu-api-dev-rds-v2-",
            "owner_id": "058264272613",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vwanu-api-dev-rds-sg-v2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "vwanu-api-dev-rds-sg-v2",
              "Project": "vwanu-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f17131e4cc494af0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.ec2",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-036710a17e909dded",
            "arn": "arn:aws:ec2:us-east-1:058264272613:elastic-ip/eipalloc-036710a17e909dded",
            "association_id": "eipassoc-0b9174865274a1f7d",
            "domain": "vpc",
            "id": "eipalloc-036710a17e909dded",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0aae7e6412b2b6851",
            "private_dns": "ip-10-0-0-239.ec2.internal",
            "private_ip": "10.0.0.239",
            "public_dns": "ec2-34-231-193-103.compute-1.amazonaws.com",
            "public_ip": "34.231.193.103",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vwanu-api-dev-nat-eip-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "vwanu-api-dev-nat-eip-1",
              "Project": "vwanu-api"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02bfd9749853d0d38",
            "arn": "arn:aws:ec2:us-east-1:058264272613:elastic-ip/eipalloc-02bfd9749853d0d38",
            "association_id": "eipassoc-0685877db0cf686f9",
            "domain": "vpc",
            "id": "eipalloc-02bfd9749853d0d38",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00e37c94b8ad8f961",
            "private_dns": "ip-10-0-1-78.ec2.internal",
            "private_ip": "10.0.1.78",
            "public_dns": "ec2-35-172-34-196.compute-1.amazonaws.com",
            "public_ip": "35.172.34.196",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vwanu-api-dev-nat-eip-2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "vwanu-api-dev-nat-eip-2",
              "Project": "vwanu-api"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264272613:internet-gateway/igw-050ab7d440e2dbe0e",
            "id": "igw-050ab7d440e2dbe0e",
            "owner_id": "058264272613",
            "tags": {
              "Name": "vwanu-api-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "vwanu-api-dev-igw",
              "Project": "vwanu-api"
            },
            "vpc_id": "vpc-0f17131e4cc494af0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-036710a17e909dded",
            "association_id": "eipassoc-0b9174865274a1f7d",
            "connectivity_type": "public",
            "id": "nat-001572fcef6b47117",
            "network_interface_id": "eni-0aae7e6412b2b6851",
            "private_ip": "10.0.0.239",
            "public_ip": "34.231.193.103",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f7521f1ef85bb2a4",
            "tags": {
              "Name": "vwanu-api-dev-nat-gw-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "vwanu-api-dev-nat-gw-1",
              "Project": "vwanu-api"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02bfd9749853d0d38",
            "association_id": "eipassoc-0685877db0cf686f9",
            "connectivity_type": "public",
            "id": "nat-0026637be84abac01",
            "network_interface_id": "eni-00e37c94b8ad8f961",
            "private_ip": "10.0.1.78",
            "public_ip": "35.172.34.196",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c8cde12dd5d3d9f8",
            "tags": {
              "Name": "vwanu-api-dev-nat-gw-2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "vwanu-api-dev-nat-gw-2",
              "Project": "vwanu-api"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264272613:route-table/rtb-0fa708697f06447c0",
            "id": "rtb-0fa708697f06447c0",
            "owner_id": "058264272613",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-001572fcef6b47117",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vwanu-api-dev-private-rt-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "vwanu-api-dev-private-rt-1",
              "Project": "vwanu-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f17131e4cc494af0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264272613:route-table/rtb-0055c65a3c4a8b3ce",
            "id": "rtb-0055c65a3c4a8b3ce",
            "owner_id": "058264272613",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0026637be84abac01",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vwanu-api-dev-private-rt-2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "vwanu-api-dev-private-rt-2",
              "Project": "vwanu-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f17131e4cc494af0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264272613:route-table/rtb-029a2756bfbcaa0b7",
            "id": "rtb-029a2756bfbcaa0b7",
            "owner_id": "058264272613",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-050ab7d440e2dbe0e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vwanu-api-dev-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "vwanu-api-dev-public-rt",
              "Project": "vwanu-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f17131e4cc494af0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a51afd278edb17d1",
            "route_table_id": "rtb-0fa708697f06447c0",
            "subnet_id": "subnet-0d9f9bed33440d24c"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0894a98b42cffc29e",
            "route_table_id": "rtb-0055c65a3c4a8b3ce",
            "subnet_id": "subnet-08b63d1969bb209bd"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d3deda4157e1607",
            "route_table_id": "rtb-029a2756bfbcaa0b7",
            "subnet_id": "subnet-0f7521f1ef85bb2a4"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01141571c90e0129f",
            "route_table_id": "rtb-029a2756bfbcaa0b7",
            "subnet_id": "subnet-0c8cde12dd5d3d9f8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264272613:subnet/subnet-0d9f9bed33440d24c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9f9bed33440d24c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264272613",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vwanu-api-dev-private-subnet-1",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "vwanu-api-dev-private-subnet-1",
              "Project": "vwanu-api",
              "Type": "Private"
            },
            "vpc_id": "vpc-0f17131e4cc494af0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264272613:subnet/subnet-08b63d1969bb209bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b63d1969bb209bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264272613",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vwanu-api-dev-private-subnet-2",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "vwanu-api-dev-private-subnet-2",
              "Project": "vwanu-api",
              "Type": "Private"
            },
            "vpc_id": "vpc-0f17131e4cc494af0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264272613:subnet/subnet-0f7521f1ef85bb2a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7521f1ef85bb2a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264272613",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vwanu-api-dev-public-subnet-1",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "vwanu-api-dev-public-subnet-1",
              "Project": "vwanu-api",
              "Type": "Public"
            },
            "vpc_id": "vpc-0f17131e4cc494af0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264272613:subnet/subnet-0c8cde12dd5d3d9f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8cde12dd5d3d9f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264272613",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vwanu-api-dev-public-subnet-2",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "vwanu-api-dev-public-subnet-2",
              "Project": "vwanu-api",
              "Type": "Public"
            },
            "vpc_id": "vpc-0f17131e4cc494af0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264272613:vpc/vpc-0f17131e4cc494af0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-020986b9e44a756e9",
            "default_route_table_id": "rtb-09e9c18b63e55748c",
            "default_security_group_id": "sg-04330d268dc0da1cd",
            "dhcp_options_id": "dopt-007a03c7ba8d32103",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f17131e4cc494af0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09e9c18b63e55748c",
            "owner_id": "058264272613",
            "tags": {
              "Name": "vwanu-api-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "vwanu-api-dev-vpc",
              "Project": "vwanu-api"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}